--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-exec": "^4.0.0",
+    "gulp-inject-string": "^1.1.2",
     "npm": "^6.13.1"
   },
   "devDependencies": {}
